# ClipClipping

./: .gitignore  CMakeLists.txt  README.md  qtquickcontrols2.conf
.github/workflows/: build.yml  release.yml
assets/: app.rc  app.rc.in
scripts/: build-appimage.sh  dev.ps1
src/: AppController.cpp  AppController.h  main.cpp
src/ui/: Main.qml
